--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+certifi==2020.12.5
+chardet==4.0.0
 EasyProcess==0.3
+feedparser==6.0.2
+idna==2.10
+python-dateutil==2.8.1
 PyVirtualDisplay==2.1
+requests==2.25.1
 selenium==3.141.0
+sgmllib3k==1.0.0
+six==1.15.0
 urllib3==1.26.3
