--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ selenium==3.141.0
 selenium-wire==4.2.1
 sgmllib3k==1.0.0
 six==1.15.0
+undetected-chromedriver==2.1.2
 urllib3==1.26.3
 wsproto==1.0.0
 xmltodict==0.12.0
